09_arquivo_binario/EA4-script-publico/Resultados/MatheusZortea/completo/result_compilation.txt
main.c:3:9: error: #include expects "FILENAME" or <FILENAME>
    3 | #include
      |         ^
registro.c: In function ‘buscaJogadorRegistro’:
registro.c:47:13: warning: unused variable ‘j’ [-Wunused-variable]
   47 |     Jogador j = inicializaJogador(-1);
      |             ^
